--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "apk-parser3": "^0.1.7",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
+    "google-play-scraper": "^10.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.18.0",
+    "next": "15.5.0",
+    "node-apk-parser": "^0.2.3",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
