--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apk-parser3": "^0.1.7",
     "bcryptjs": "^3.0.2",
+    "client-s3": "github:aws-sdk/client-s3",
     "cloudinary": "^2.7.0",
     "google-play-scraper": "^10.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -18,9 +19,11 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "node-apk-parser": "^0.2.3",
+    "node-forge": "^1.3.1",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
