--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.7.0",
     "google-play-scraper": "^10.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
